scrollbar fix for code block.

--- a/website/src/assets/style/variables.scss
+++ b/website/src/assets/style/variables.scss
@@ -50,6 +50,7 @@ pre {
   overflow-x: auto;
   overflow-wrap: normal;
   white-space: pre;
+  word-wrap: normal;
 }
 code[class^="language-"] {
   overflow-wrap: normal;
